# graphic_hw3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: camera.hpp  motion.hpp  optimus_prime.hpp  scene_obj.hpp  shader.hpp  test_arm.hpp
src/: scene_obj.cpp  shader.cpp
